<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/profielPictureImageView"
        android:layout_width="110dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/infoTextView"
        app:layout_constraintBottom_toBottomOf="@+id/conactInfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/contactInfoHeader"
        app:srcCompat="@drawable/profilepicture"
        tools:srcCompat="@drawable/profilepicture" />

    <TextView
        android:id="@+id/infoHeaderTextView"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/infoHeaderTextView"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conactInfo" />

    <TextView
        android:id="@+id/infoTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/infoTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoHeaderTextView" />

    <TextView
        android:id="@+id/contactInfoHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/contactInfoHeader"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/profielPictureImageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/conactInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/contactInfo"
        app:layout_constraintStart_toEndOf="@+id/profielPictureImageView"
        app:layout_constraintTop_toBottomOf="@+id/contactInfoHeader" />

    <Button
        android:id="@+id/projectsButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/projectsHeader"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoTextView" />

</android.support.constraint.ConstraintLayout>